--- a/Lab/PART B/html-css/time_table.html
+++ b/Lab/PART B/html-css/time_table.html
@@ -1,106 +1,116 @@
-<!DOCTYPE html PUBLIC '-//W3C//DTD XHTML 1.0 Strict//EN' 'http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd'>
+<!DOCTYPE html PUBLIC '-//W3C//DTD XHTML 1.0 Strict//EN'	'http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd'>
 <html xmlns='http://www.w3.org/1999/xhtml' xml:lang='en' lang='en'>
-
-<head>
-    <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
-    <title>Page Title</title>
-    <link rel='stylesheet' href='style.css' type='text/css' media='screen' charset='utf-8' />
+    <head>
+        <meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
+        <title>Page Title</title>
+        <link rel='stylesheet' href='style.css' type='text/css' media='screen' charset='utf-8'/>
+    </head>
     <style>
-        td {
-            text-align: center;
-        }
-
-        * {
-            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        }
+        *{text-align: center;}
     </style>
-</head>
-
-
+    <body>
+    </body>
+</html>
 <body>
     <h1>TIME TABLE</h1>
-    <table border="10" cellspacing="0" align="center">
+    <table border="5" cellspacing="0" align="center">
         <!--<caption>Timetable</caption>-->
         <tr>
-            <th align="center" style="width: 40px;height: 50px;">Period</th>
-            <td align="center">I<br>9:30-10:30</td>
-            <td align="center">II<br>10:30-10:30</td>
-            <td align="center">III<br>11:30-12:30</td>
-            <td align="center">Lunch<br>12:30-1:30</td>
-            <td align="center">IV<br>1:30-2:30</td>
-            <td align="center">V<br>2:30-3:30</td>
-            <td align="center">VI<br>3:30-4:30</td>
-        </tr>
-        <tr>
-            <th style="width: 40px;height: 50px;">Monday</th>
-            <td>Chem</td>
-            <td>Phy</td>
-            <td>Maths</td>
-            <td rowspan="6" style="text-align: center">
-                <h1>L</h1><br>
-                <h1>U</h1><br>
-                <h1>N</h1><br>
-                <h1>C</h1><br>
-                <h1>H</h1>
+            <td align="center" height="50" width="100"><br>
+                <b>Day/Period</b></br>
             </td>
-            <td>Eng</td>
-            <td>CD</td>
-            <td>CN</td>
+            <td align="center" height="50" width="100">
+                <b>I<br>9:30-10:20</b>
+            </td>
+            <td align="center" height="50" width="100">
+                <b>II<br>10:20-11:10</b>
+            </td>
+            <td align="center" height="50" width="100">
+                <b>III<br>11:10-12:00</b>
+            </td>
+            <td align="center" height="50" width="100">
+                <b>12:00-12:40</b>
+            </td>
+            <td align="center" height="50" width="100">
+                <b>IV<br>12:40-1:30</b>
+            </td>
+            <td align="center" height="50" width="100">
+                <b>V<br>1:30-2:20</b>
+            </td>
+            <td align="center" height="50" width="100">
+                <b>VI<br>2:20-3:10</b>
+            </td>
+            <td align="center" height="50" width="100">
+                <b>VII<br>3:10-4:00</b>
+            </td>
         </tr>
         <tr>
-            <th style="width: 40px;height: 50px;">Tuesday</th>
-
-            <td>Chem</td>
-            <td>Phy</td>
-            <td>Maths</td>
-            <td>Eng</td>
-            <td>Phy</td>
-            <td>Maths</td>
+            <td align="center" height="50">
+                <b>Monday</b>
+            </td>
+            <td align="center" height="50">Eng</td>
+            <td align="center" height="50">Mat</td>
+            <td align="center" height="50">Che</td>
+            <td rowspan="6" align="center" height="50">
+                <h2>L<br>U<br>N<br>C<br>H</h2>
+            </td>
+            <td colspan="3" align="center" height="50">LAB</td>
+            <td align="center" height="50">Phy</td>
         </tr>
         <tr>
-            <th style="width: 40px;height: 50px;">Wednesday</th>
-
-
-
-            <td>Eng</td>
-            <td>CD</td>
-            <td>CN</td>
-            <td>Chem</td>
-            <td>Phy</td>
-            <td>Maths</td>
+            <td align="center" height="50">
+                <b>Tuesday</b>
+            </td>
+            <td colspan="3" align="center" height="50">LAB
+            </td>
+            <td align="center" height="50">Eng</td>
+            <td align="center" height="50">Che</td>
+            <td align="center" height="50">Mat</td>
+            <td align="center" height="50">SPORTS</td>
         </tr>
         <tr>
-            <th style="width: 40px;height: 50px;">Thursday</th>
-            <td>Chem</td>
-            <td>Kannada</td>
-            <td>Phy</td>
-            <td>Eng</td>
-            <td>Maths</td>
-
-            <td>CN</td>
+            <td align="center" height="50">
+                <b>Wednesday</b>
+            </td>
+            <td align="center" height="50">Mat</td>
+            <td align="center" height="50">phy</td>
+            <td align="center" height="50">Eng</td>
+            <td align="center" height="50">Che</td>
+            <td colspan="3" align="center" height="50">LIBRARY
+            </td>
         </tr>
         <tr>
-            <th style="width: 40px;height: 50px;">Friday</th>
-            <td>Phy</td>
-            <td>Chem</td>
-            <td>Kannada</td>
-            <td>Eng</td>
-            <td>CD</td>
-            <td>CN</td>
+            <td align="center" height="50">
+                <b>Thursday</b>
+            </td>
+            <td align="center" height="50">Phy</td>
+            <td align="center" height="50">Eng</td>
+            <td align="center" height="50">Che</td>
+            <td colspan="3" align="center" height="50">LAB
+            </td>
+            <td align="center" height="50">Mat</td>
         </tr>
         <tr>
-            <th style="width: 40px;height: 50px;">Saturday</th>
-            <td>Kannada</td>
-            <td>Phy</td>
-            <td>Eng</td>
-            <td>Maths</td>
-            <td>EVS</td>
-            <td>CN</td>
+            <td align="center" height="50">
+                <b>Friday</b>
+            </td>
+            <td colspan="3" align="center" height="50">LAB
+            </td>
+            <td align="center" height="50">Mat</td>
+            <td align="center" height="50">Che</td>
+            <td align="center" height="50">Eng</td>
+            <td align="center" height="50">Phy</td>
         </tr>
-
         <tr>
-
+            <td align="center" height="50">
+                <b>Saturday</b>
+            </td>
+            <td align="center" height="50">Eng</td>
+            <td align="center" height="50">Che</td>
+            <td align="center" height="50">Mat</td>
+            <td colspan="3" align="center" height="50">SEMINAR
+            </td>
+            <td align="center" height="50">SPORTS</td>
         </tr>
     </table>
 </body>
-</html>
