--- a/Lab/PART B/html-css/form.html
+++ b/Lab/PART B/html-css/form.html
@@ -1,70 +1,48 @@
 <!DOCTYPE html PUBLIC '-//W3C//DTD XHTML 1.0 Strict//EN' 'http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd'>
 <html xmlns='http://www.w3.org/1999/xhtml' xml:lang='en' lang='en'>
- 
+
 <head>
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
     <title>Page Title</title>
     <link rel='stylesheet' href='style.css' type='text/css' media='screen' charset='utf-8' />
     <style>
-        *{
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        }
-        div {
-            width: 100px;
-        }
- 
-        div,
-        input {
-            display: inline-block;
-        }
-        button{
-            border-radius: 5px;
-           
-        }
+
+
     </style>
 </head>
- 
+
 <body>
     <form>
-        <div> <label id="la" for="name">Name</label></div>
+        <label id="la" for="name">Name</label>
         <input type="text"><br>
-        <br>
-        <div> <label for="email">Email</label></div>
+        <label for="email">Email</label>
         <input type="text"><button>Check</button><br>
-        <br>
-        <div><label for="age">Age</label></div>
+        <label for="age">Age</label>
         <input type="number"><br>
-        <br>
-        <div> <label for="country">Country</label></div>
+        <label for="country">Country</label>
         <input type="country"><br>
-        <br>
-        <div> <label for="password">Password</label></div>
+        <label for="password">Password</label>
         <input type="password" name="" id=""><br>
-        <br>
-        <div> <label for="resume">Resume</label></div>
+        <label for="resume">Resume</label>
         <input type="file"><br>
-        <br>
-        <div> <label for="hobbies">Hobbies</label></div>
+        <label for="hobbies">Hobbies</label>
         <input type="checkbox" name="" id=""><label for="cricket">Cricket</label>
         <input type="checkbox"><label for="Football">Football</label><br>
-        <br>
-        <div> <label for="Gender">Gender</label></div>
-        <input type="radio"><label for="female">Female</label><input type="radio"><label for="male">Male</label><br>
-        <br>
-        <div> <label for="city">City</label></div>
+        <label for="Gender">Gender</label>
+        <input type="radio"><label for="female">Female</label>
+        <input type="radio"><label for="male">Male</label><br>
+        <label for="city">City</label>
         <select name="city" id="">
             <option value="">Choose-city</option>
             <option value="bengaluru">Bengaluru</option>
             <option value="bengaluru">Mysuru</option>
         </select>
         <br>
-        <br>
- 
-        <div style="height: 40px"> <label for="address">Address</label></div>
+        <label for="address">Address</label>
         <textarea name="area-details" id="" cols="24" rows="5"></textarea><br>
         <button>Submit</button>
         <button>Reset</button>
     </form>
 </body>
- 
+
 </html>
