--- a/Lab/PART B/html-css/css_box_model.html
+++ b/Lab/PART B/html-css/css_box_model.html
@@ -10,13 +10,16 @@
             width: 600px;
             border: solid red 40px;
             height: 400px;
+            margin: auto;
         }
  
         .inner-box {
-            margin-top: 120px;
-            width: 600px;
+            
+            width: 400px;
             height: 80px;
+            margin: auto;
             text-align: center;
+            margin-top: 120px;
             padding-top: 40px;
             background-color: orange;
             font-size: 20px;
