--- a/Lab/PART B/html-css/books.html
+++ b/Lab/PART B/html-css/books.html
@@ -16,7 +16,7 @@
         }
 
         .line {
-            height: 2px;
+            height: 1px;
             width: 500px;
             background-color: black;
 
@@ -32,7 +32,9 @@
 
         #button {
             margin: 20px;
+            background-color: orange;
         }
+        
     </style>
 </head>
 
@@ -43,10 +45,13 @@
         <form>
             <label for="author" id="field">Author</label>
             <input type="text" id="field"><br>
+
             <label for="title" id="field">Title</label>
             <input type="text" id="field"><br>
+
             <label for="price" id="field">Price</label>
             <input type="number" id="field"><br>
+
             <br>
             <input type="submit" value="Submit" id="button">
             <input type="reset" value="reset" id="button">
