--- a/Lab/PART B/html-css/time_table.html
+++ b/Lab/PART B/html-css/time_table.html
@@ -1,120 +1,71 @@
-<!DOCTYPE html PUBLIC '-//W3C//DTD XHTML 1.0 Strict//EN'	'http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd'>
-<html xmlns='http://www.w3.org/1999/xhtml' xml:lang='en' lang='en'>
-    <head>
-        <meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
-        <title>Page Title</title>
-        <link rel='stylesheet' href='style.css' type='text/css' media='screen' charset='utf-8'/>
-    </head>
+<!DOCTYPE html>
+<html>
     <style>
-        *{text-align: center;}
+        *{text-align: center}
+        td{width: 80px;border: 1px solid     black}
+        tr{height: 60px}
+        table{border: 6px solid black; margin: auto; margin-top: 10%;}
     </style>
-    <body>
-    </body>
-</html>
-<body>
-    <h1>TIME TABLE</h1>
-    <table border="5" cellspacing="0" align="center">
-        <!--<caption>Timetable</caption>-->
+    <table cellspacing="0">
         <tr>
-            <td align="center" height="50" width="100"><br>
-                <b>Day/Period</b></br>
-            </td>
-            <td align="center" height="50" width="100">
-                <b>I<br>9:30-10:20</b>
-            </td>
-            <td align="center" height="50" width="100">
-                <b>II<br>10:20-11:10</b>
-            </td>
-            <td align="center" height="50" width="100">
-                <b>III<br>11:10-12:00</b>
-            </td>
-            <td align="center" height="50" width="100">
-                <b>12:00-12:40</b>
-            </td>
-            <td align="center" height="50" width="100">
-                <b>IV<br>12:40-1:30</b>
-            </td>
-            <td align="center" height="50" width="100">
-                <b>V<br>1:30-2:20</b>
-            </td>
-            <td align="center" height="50" width="100">
-                <b>VI<br>2:20-3:10</b>
-            </td>
-            <td align="center" height="50" width="100">
-                <b>VII<br>3:10-4:00</b>
-            </td>
-        </tr>
-
-
-        <tr>
-            <td align="center" height="50">
-                <b>Monday</b>
-            </td>
-            <td align="center" height="50">Eng</td>
-            <td align="center" height="50">Mat</td>
-            <td align="center" height="50">Che</td>
-            <td rowspan="6" align="center" height="50">
-                <h2>L<br>U<br>N<br>C<br>H</h2>
-            </td>
-            <td colspan="3" align="center" height="50">LAB</td>
-            <td align="center" height="50">Phy</td>
-        </tr>
-
-
-        <tr>
-            <td align="center" height="50">
-                <b>Tuesday</b>
-            </td>
-            <td colspan="3" align="center" height="50">LAB
-            </td>
-            <td align="center" height="50">Eng</td>
-            <td align="center" height="50">Che</td>
-            <td align="center" height="50">Mat</td>
-            <td align="center" height="50">SPORTS</td>
+            <td><b>Day/Period</b></td>
+            <td>I<br>9:30 - 10:20</td>
+            <td>II<br>10:20 - 11:10</td>
+            <td>III<br>11:10 - 12:00</td>
+            <td>12:00 - 12:40</td>
+            <td>IV<br>12:40 - 1:30</td>
+            <td>V<br>1:30 - 2:20</td>
+            <td>VI<br>2:20 - 3:10</td>
+            <td>VII<br>3:10 - 4:00</td>
         </tr>
         <tr>
-            <td align="center" height="50">
-                <b>Wednesday</b>
-            </td>
-            <td align="center" height="50">Mat</td>
-            <td align="center" height="50">phy</td>
-            <td align="center" height="50">Eng</td>
-            <td align="center" height="50">Che</td>
-            <td colspan="3" align="center" height="50">LIBRARY
-            </td>
+            <td><b>Monday</b></td>
+            <td>Eng</td>
+            <td>Math</td>
+            <td>Chem</td>
+            <td rowspan="6"><h2>L<br>U<br>N<br>C<br>H</h2></td>
+            <td colspan="3">LAB</td>
+            <td>Phy</td>
         </tr>
         <tr>
-            <td align="center" height="50">
-                <b>Thursday</b>
-            </td>
-            <td align="center" height="50">Phy</td>
-            <td align="center" height="50">Eng</td>
-            <td align="center" height="50">Che</td>
-            <td colspan="3" align="center" height="50">LAB
-            </td>
-            <td align="center" height="50">Mat</td>
+            <td><b>Tuesday</b></td>
+            <td colspan="3">LAB</td>
+            <td>Eng</td>
+            <td>Chem</td>
+            <td>Math</td>
+            <td>Sport</td>
         </tr>
         <tr>
-            <td align="center" height="50">
-                <b>Friday</b>
-            </td>
-            <td colspan="3" align="center" height="50">LAB
-            </td>
-            <td align="center" height="50">Mat</td>
-            <td align="center" height="50">Che</td>
-            <td align="center" height="50">Eng</td>
-            <td align="center" height="50">Phy</td>
+            <td><b>Wednesday</b></td>
+            <td>Math</td>
+            <td>Phy</td>
+            <td>Eng</td>
+            <td>Chem</td>
+            <td colspan="3">LIBRARY</td>
         </tr>
         <tr>
-            <td align="center" height="50">
-                <b>Saturday</b>
-            </td>
-            <td align="center" height="50">Eng</td>
-            <td align="center" height="50">Che</td>
-            <td align="center" height="50">Mat</td>
-            <td colspan="3" align="center" height="50">SEMINAR
-            </td>
-            <td align="center" height="50">SPORTS</td>
+            <td><b>Thursday</b></td>
+            <td>Phy</td>
+            <td>Eng</td>
+            <td>Chem</td>
+            <td colspan="3">LAB</td>
+            <td>Math</td>
+        </tr>
+        <tr>
+            <td><b>Friday</b></td>
+            <td colspan="3">LAB</td>
+            <td>Math</td>
+            <td>Chem</td>
+            <td>Eng</td>
+            <td>Phy</td>
+        </tr>
+        <tr>
+            <td><b>Saturday</b></td>
+            <td>Eng</td>
+            <td>Chem</td>
+            <td>Math</td>
+            <td colspan="3">SEMINAR</td>
+            <td>SPORTS</td>
         </tr>
     </table>
-</body>
+</html>
